[project]
name = "p2p"
version = "0.3.0"
description = "Dead-simple peer-to-peer WebRTC chat with copy-paste signaling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiortc>=1.9"]

# One command for both peers (e.g. uvx --from git+<url> connect).
# Role is inferred: Enter to start (offerer), or paste the peer's OFFER (answerer).
[project.scripts]
connect = "p2p:connect_cmd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["p2p.py"]
